--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "date-fns": "^4.1.0",
     "jose": "^5.9.6",
     "ldrs": "^1.0.2",
+    "leaflet": "^1.9.4",
+    "leaflet.heat": "^0.2.0",
     "lucide-react": "^0.468.0",
     "next": "15.0.4",
     "react": "^19.0.0",
@@ -37,6 +39,7 @@
     "zod": "^3.24.0"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.15",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
