Adds heatmap and improves incident display
Adds a heatmap to the dashboard to visualize incident locations. Improves the display of incidents on the main page and reports page, adding a limit to the number of incidents shown and improving layout for better readability on different screen sizes.  Adds @types/leaflet.heat for heatmap functionality. Updates query keys for react-query to ensure proper data fetching and caching.

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tanstack/react-query": "^5.62.3",
     "@tanstack/react-query-devtools": "^5.62.3",
     "@tanstack/zod-form-adapter": "^0.39.0",
+    "@types/leaflet.heat": "^0.2.4",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
